--- a/network.html
+++ b/network.html
@@ -107,6 +107,10 @@
             <h2><a href="network/networking.html">Conceptos Básicos del Networking</a></h2>
         </div> 
         <div class="article-section">
+            <img src="media/imagen2.png" alt="VLAN" class="article-image">
+            <h2><a href="network/vlan.html">VLAN</a></h2>
+        </div> 
+        <div class="article-section">
             <img src="media/imagen2.png" alt="Enlaces de Agregación" class="article-image">
             <h2><a href="network/enlace.html">Enlaces de Agregación</a></h2>
         </div>  
