--- a/network/enlace.html
+++ b/network/enlace.html
@@ -223,7 +223,7 @@ Switch1(config-if)# exit</code></pre>
             <h2>StackWise</h2>
             <p>StackWise es una tecnología específica de los switches Cisco Catalyst que permite apilar varios switches en una configuración lógica de un solo switch. Con StackWise, los switches se conectan mediante enlaces especiales de apilamiento, formando una única entidad de gestión y control. Esto simplifica la administración de la red al tratar múltiples switches como uno solo en términos de configuración, monitoreo y administración. Además, StackWise proporciona alta disponibilidad al permitir que uno de los switches actúe como switch maestro y los demás como esclavos. Si el switch maestro falla, otro switch en el stack puede asumir su función automáticamente sin interrumpir la conectividad de la red.</p>
             <div class="blog-image-grande">
-                <img src="media/enlace3.jpg" alt="">
+                <img src="media/vlan3.jpg" alt="">
             </div>
             </div>
         </div>       
