--- a/network/vlan.html
+++ b/network/vlan.html
@@ -174,6 +174,7 @@ Switch4# copy running-config startup-config</code></pre>
                 <p>Una vez configurado como un enrutador inter-VLAN, el Switch1 podrá enrutar el tráfico entre las VLANs, permitiendo que la VLAN 10 se comunique con la VLAN 20 a través de él.</p>
                 <h6>Inter-VLAN Routing</h6>
                 <p>En la siguiente configuración, los Switches 2, 3 y 4 tienen sus puertos configurados como puertos de acceso para sus respectivas VLANs. El router tiene una interfaz configurada para cada una de las VLANs, y actuará como un router inter-VLAN para enrutar el tráfico entre ellas.</p>
+                <p>De igual manera se va a usar la topología de red que se muestra en la imagen anterior, solo que se sustituye un switch por un router, con el cual podrán comunicarse todas las VLANs entre sí mediante subinterfaces.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
@@ -322,7 +323,8 @@ Switch4# copy running-config startup-config</code></pre>
                 <p>Los switches VTP intercambian información de configuración de VLAN, como nombres de VLAN, números de VLAN y estados de VLAN, lo que asegura que todos los switches en la red tengan una visión coherente de la configuración de VLAN.</p>
                 <p>Al hacer un cambio en la configuración de VLAN en un switch VTP servidor, esos cambios se propagan automáticamente a otros switches VTP, eliminando la necesidad de configurar cada switch de forma individual.</p>
                 <p>VTP utiliza un número de revisión para realizar un seguimiento de la versión de la información de configuración de VLAN. Si un switch con una revisión más antigua se une a la red, no se le permitirá sobrescribir la configuración existente a menos que tenga una revisión más alta.</p>
-                <p>Normalmente, en los switches que están conectados en modo trunk, solo es necesario activarlo en un lado del enlace, en este caso, el Switch1 que trabaja en la capa 3 y distribuye el tráfico de los switches que están en modo acceso.</p>
+                <p>Normalmente, los puertos de los switches que están conectados en modo trunk, solo es necesario activarlo en un lado del enlace, en este caso, el Switch1 que trabaja en la capa 3 y distribuye el tráfico de los switches que están en modo acceso.</p>
+                <p>De igual manera se va a usar la topología de red que se muestra en la imagen anterior, solo que se usa un switch capa 3 (switch1), con el cual podrán comunicarse todas las VLANs entre sí.<p>
                 <p>A continuación, se muestra cómo realizar una configuración mediante VTP:</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
@@ -416,6 +418,7 @@ Switch4# copy running-config startup-config</code></pre>
                 <h6>Inter-VLAN Routing</h6>
                 <p>No es necesario configurar protocolos de enrutamiento si las VLANs están en diferentes dominios de broadcas.</p>
                 <p>Las VLANs en los switches se comunicarán entre sí a través del router sin problemas. Esto se debe a que el router está configurado con subinterfaces para cada VLAN y actúa como una puerta de enlace entre ellas.</p>
+                <p>De igual manera se va a usar la topología de red que se muestra en la imagen anterior, solo que se sustituye un switch por un router, con el cual podrán comunicarse todas las VLANs entre sí mediante subintefaces.</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
@@ -560,6 +563,7 @@ Switch4# copy running-config startup-config</code></pre>
                     </div>
                 </div>
                 <h6>VTP</h6>
+                <p>De igual manera se va a usar la topología de red que se muestra en la imagen anterior, solo que se usa un switch capa 3 (switch1), con el cual podrán comunicarse todas las VLANs entre sí.<p>
                 <div class="consola">
                     <div class="barra-superior-consola">
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
