--- a/network/vlan.html
+++ b/network/vlan.html
@@ -58,7 +58,7 @@
                     <li>La mayoría de los switches tienen todos los puertos configurados inicialmente en la VLAN 1 como puertos de acceso.</li>
                 </ol>
                 <h2>Configuración de VLAN</h2>
-                <p>Configura cada uno de los 3 switches con sus puertos GigabitEthernet0/0/1, GigabitEthernet0/0/2 y GigabitEthernet0/0/3 en las VLANs 10, 20 y 30 respectivamente, y el puerto GigabitEthernet0/0/0 como troncal al switch capa 3 (LSW1), tal como se muestra en la imagen.</p>
+                <p>Configura cada uno de los 3 switches con sus puertos GigabitEthernet0/1, GigabitEthernet0/2 y GigabitEthernet0/3 en las VLANs 10, 20 y 30 respectivamente, y el puerto GigabitEthernet0/0/0 como troncal al switch capa 3 (LSW1), tal como se muestra en la imagen.</p>
                 <p>Se van a realizar las configuraciones tomando la imagen siguiente como referencia, solo se necesita tener en cuenta que la VLAN A corresponde a la 10, la B a 20 y la C a 30.</p>
                 <div class="blog-image-grande">
                     <img src="media/vlan2.png" alt="">
