--- a/network/vlan.html
+++ b/network/vlan.html
@@ -326,7 +326,7 @@ Switch4# copy running-config startup-config</code></pre>
                 <p>VTP utiliza un número de revisión para realizar un seguimiento de la versión de la información de configuración de VLAN. Si un switch con una revisión más antigua se une a la red, no se le permitirá sobrescribir la configuración existente a menos que tenga una revisión más alta.</p>
                 <p>Normalmente, los puertos de los switches que están conectados en modo trunk, solo es necesario activarlo en un lado del enlace, en este caso, el Switch1 que trabaja en la capa 3 y distribuye el tráfico de los switches que están en modo acceso.</p>
                 <p>De igual manera se va a usar la topología que se muestra en la imagen anterior para configurar los dispositivos de red, solo que se usa un switch capa 3 (switch1), con el cual podrán comunicarse todas las VLANs entre sí.<p>
-                <p>A continuación, se muestra cómo realizar una configuración mediante VTP y habilitar la conectividad entre todas las VLANs, a través de todos los swiches configurados como acceso:</p>
+                <p>A continuación, se muestra como configurar el Protocolo de Transmisión de VLAN (VTP) y establecer la conectividad entre todas las VLANs a través de todos los switches configurados en modo de acceso:</p>
                 <div class="consola">
                     <div class="barra-superior-consola">
                         <button class="boton-copiar-consola"><i class="fas fa-copy"></i>&nbsp;Copy</button>
