--- a/hacking.html
+++ b/hacking.html
@@ -74,6 +74,14 @@
             <img src="media/imagen4.png" alt="Fases del Hacking" class="article-image">
             <h2><a href="hacking/fases.html">Fases del Hacking</a></h2>
         </div>   
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Escaneo de Puertos" class="article-image">
+            <h2><a href="hacking/nmap.html">Escaneo de Puertos</a></h2>
+        </div>  
+        <div class="article-section">
+            <img src="media/imagen4.png" alt="Fuzzing" class="article-image">
+            <h2><a href="hacking/fuzzing.html">Fuzzing</a></h2>
+        </div>  
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen4.png" alt="En proceso" class="article-image">
